fix text overflow examples

--- a/less/availity-scaffolding.less
+++ b/less/availity-scaffolding.less
@@ -55,13 +55,13 @@ hr {
 hr {
   &.divider {
     .clearfix;
-    border: none;
+    border: 0;
     margin: @section-padding 0;
   }
 
   &.divider-lg {
     .clearfix;
-    border: none;
+    border: 0;
     margin: (@section-padding * 2) 0;
   }
 }
